# cliprelay

./: .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  PLAN-subscription-recovery.md  PROTOCOL.md  README.md  REFACTOR.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  zapstore.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/icons/: icon.icns
app/src-tauri/plugins/tauri-plugin-amber/: Cargo.toml  build.rs
app/src-tauri/plugins/tauri-plugin-amber/android/: build.gradle.kts
app/src-tauri/plugins/tauri-plugin-amber/android/src/main/java/com/hoppe/cliprelay/amber/: AmberPlugin.kt
app/src-tauri/plugins/tauri-plugin-amber/permissions/: default.toml
app/src-tauri/plugins/tauri-plugin-amber/src/: lib.rs  mobile.rs
app/src-tauri/plugins/tauri-plugin-clipboard-action/: Cargo.toml  build.rs
app/src-tauri/plugins/tauri-plugin-clipboard-action/android/: build.gradle.kts
app/src-tauri/plugins/tauri-plugin-clipboard-action/permissions/: default.toml
app/src-tauri/plugins/tauri-plugin-clipboard-action/src/: lib.rs
app/src-tauri/plugins/tauri-plugin-foreground-service/: Cargo.toml  build.rs
app/src-tauri/plugins/tauri-plugin-foreground-service/android/: build.gradle.kts
app/src-tauri/plugins/tauri-plugin-foreground-service/permissions/: default.toml
app/src-tauri/plugins/tauri-plugin-foreground-service/src/: lib.rs
app/src-tauri/plugins/tauri-plugin-keychain/: .gitignore  Cargo.toml  build.rs
app/src-tauri/plugins/tauri-plugin-keychain/android/: build.gradle.kts  consumer-rules.pro
app/src-tauri/plugins/tauri-plugin-keychain/android/src/main/java/com/hoppe/cliprelay/keychain/: KeychainPlugin.kt
app/src-tauri/plugins/tauri-plugin-keychain/permissions/: default.toml
app/src-tauri/plugins/tauri-plugin-keychain/src/: lib.rs
app/src-tauri/plugins/tauri-plugin-notification-android/: Cargo.toml  build.rs
app/src-tauri/plugins/tauri-plugin-notification-android/android/: build.gradle.kts
app/src-tauri/plugins/tauri-plugin-notification-android/permissions/: default.toml
app/src-tauri/plugins/tauri-plugin-notification-android/src/: lib.rs
app/src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
