[package]
name = "tauri-plugin-keychain"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-keychain"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
