[package]
name = "tauri-plugin-notification-android"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-notification-android"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
